force-app/main/default/objects/Invoice__c/fields/Invoice_Url__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Url__c</fullName>
    <label>Invoice Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>