force-app/main/default/objects/Invoice__c/fields/Is_Replace__c.field-meta.xml
<CustomField>
    <fullName>Is_Replace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Replace</label>
    <type>Checkbox</type>
</CustomField>