force-app/main/default/objects/Invoice__c/fields/process_quantity__c.field-meta.xml
<CustomField>
    <fullName>process_quantity__c</fullName>
    <label>Process Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>