force-app/main/default/objects/Invoice__c/fields/Return_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Return_Quantities__c</fullName>
    <label>Return Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>